tests/toy/neg/000788_mutation.toylang
program a = { a = program 0; } .
